name: postgresql-simple-interpolate
version: 1.2.13
synopsis: Interpolated SQL queries using parameterized queries via quasiquotation
description: Interpolated SQL queries using parameterized queries via quasiquotation
license: BSD3
license-file: LICENSE
author: Elliot Cameron
maintainer: eacameron@gmail.com
copyright: ©2019 Elliot Cameron
homepage: https://github.com/3noch/postgresql-simple-interpolate
category: Database
build-type: Simple
cabal-version: >=1.8

source-repository head
  type: git
  location: git://github.com/3noch/postgresql-simple-interpolate.git

library
  hs-source-dirs: src
  exposed-modules:
    Database.PostgreSQL.Simple.SqlQQ.Interpolated
    Database.PostgreSQL.Simple.SqlQQ.Interpolated.Parser
  build-depends:
    base >= 4.5 && < 5,
    haskell-src-meta >= 0.6 && < 0.9,
    mtl >=2.1 && < 2.3,
    parsec ==3.1.*,
    postgresql-simple,
    template-haskell
  ghc-options: -Wall -O2

-- test-suite test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--     test
--   build-depends:
--     base >=4.5 && <5,
--     here,
--     hspec,
--     bytestring,
--     text
--   other-modules:
--     Data.String.HereSpec
--   default-language: Haskell2010
